# codex-cleaner

./: Cargo.toml  README.md
src/: cli.rs  fs_clean.rs  main.rs  sqlite_clean.rs  summary.rs
templates/: memory_compaction.md
